--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,10 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+    - name: Install JDK
+      run: apt-get install openjdk-8-jdk
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
